# dir-abs-whitespace

./: CHANGELOG.md  README.md  cabal.project  dir-abs-whitespace.cabal  flake.nix  hie.yaml
.github/workflows/: ci.yaml
app/: Main.hs
