cabal-version:      2.4
name:               dir-abs-whitespace
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:          2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/dir-abs-whitespace/
bug-reports:        https://github.com/tbidne/dir-abs-whitespace/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/dir-abs-whitespace

common common-lang
  default-extensions: ImportQualifiedPost
  default-language:   Haskell2010

executable test-abs
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base       >=4.14.0.0 && <4.22
    , directory  ^>=1.3.9.0
    , filepath   ^>=1.5.4.0

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N
